--- a/src/app/modules/inventario/producto/producto.component.html
+++ b/src/app/modules/inventario/producto/producto.component.html
@@ -2,194 +2,147 @@
 <app-sidebar></app-sidebar>
 <br />
 <div class="content-wrapper">
-  <section class="content">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <div class="card">
-            <div class="card-header">
-              <div class="crear">
-                <button
-                  type="button"
-                  class="btn btn-primary btn-rounded m-2"
-                  (click)="openDialog()"
-                >
-                  Crear
-                </button>
-                <input
-                  hidden
-                  type="file"
-                  #uploader
-                  (change)="uploadFile($event)"
-                />
-                <button class="btn btn-success" (click)="uploader.click()">
-                  Cargar
-                </button>
-                <button
-                  type="button"
-                  class="btn btn-secondary m-2"
-                  (click)="saveExcel()"
-                  [disabled]="excelData.length == 0"
-                  >
-                  Guardar
-                </button>
-              </div>
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-header">
+                            <div class="crear">
+                                <button type="button" class="btn btn-primary btn-rounded m-2" (click)="openDialog()">
+                                    Crear
+                                </button>
+                                <input hidden type="file" #uploader (change)="uploadFile($event)" />
+                                <button class="btn btn-success" (click)="uploader.click()">
+                                    Cargar
+                                </button>
+                                <button type="button" class="btn btn-secondary m-2" (click)="saveExcel()"
+                                    [disabled]="excelData.length == 0">
+                                    Guardar
+                                </button>
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <mat-form-field appearance="standard">
+                                <input matInput type="text" (keyup)="applyFilter($event)" placeholder="Buscar..." #input
+                                    class="form-control" />
+                            </mat-form-field>
+
+                            <table class="table table-striped" mat-table [dataSource]="dataSource" matSort>
+                                <!-- Weight Column -->
+                                <ng-container matColumnDef="id">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{ element.id }}
+                                    </td>
+                                </ng-container>
+
+                                <!-- Weight Column -->
+                                <ng-container matColumnDef="name">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                                        Nombre
+                                    </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{ element.name }}
+                                    </td>
+                                </ng-container>
+
+
+                                <!-- Weight Column -->
+                                <ng-container matColumnDef="industry">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                                        Industria
+                                    </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{ element.industry }}
+                                    </td>
+                                </ng-container>
+
+                                <!-- Weight Column -->
+                                <ng-container matColumnDef="marca">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                                        Marca
+                                    </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{ element.marca }}
+                                    </td>
+                                </ng-container>
+
+                                <!-- Weight Column -->
+                                <ng-container matColumnDef="stock">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                                        Cantidad
+                                    </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{ element.stock }}
+                                    </td>
+                                </ng-container>
+
+                                <!-- Weight Column -->
+                                <ng-container matColumnDef="supplier">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                                        Proveedor
+                                    </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{ element.supplier }}
+                                    </td>
+                                </ng-container>
+
+                                <!-- Weight Column -->
+                                <ng-container matColumnDef="branchOffice">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                                        Sede
+                                    </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{ element.branchOffice }}
+                                    </td>
+                                </ng-container>
+
+                                <!-- Weight Column -->
+                                <ng-container matColumnDef="is_active">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                                        Estado
+                                    </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        <span class="badge text-bg-success"
+                                            *ngIf="element.is_active == true">Activado</span>
+                                        <span class="badge text-bg-danger"
+                                            *ngIf="element.is_active == false">Desactivado</span>
+                                    </td>
+                                </ng-container>
+
+                                <!-- Weight Column -->
+                                <ng-container matColumnDef="opciones">
+                                    <th mat-header-cell *matHeaderCellDef>Acciones</th>
+                                    <td mat-cell *matCellDef="let element">
+                                        <button (click)="openDialogForEdit(element)" class="btn btn-warning">
+                                            <i class="fa fa-pen"> </i>
+                                        </button>
+                                        &nbsp;
+                                        <button (click)="modificarEstado(element.id, 0)" class="btn btn-danger"
+                                            *ngIf="element.is_active == 1">
+                                            <i class="fa fa-trash"> </i>
+                                        </button>
+                                        <button (click)="modificarEstado(element.id, 1)" class="btn btn-success"
+                                            *ngIf="element.is_active == 0">
+                                            <i class="fa fa-check"> </i>
+                                        </button>
+                                        &nbsp;
+                                        <button class="btn btn-primary" (click)="openDialogForDetail(element)">
+                                            <i class="fa fa-eye"></i>
+                                        </button>
+                                    </td>
+                                </ng-container>
+
+                                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                            </table>
+                            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+                            </mat-paginator>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="card-body">
-              <mat-form-field appearance="standard">
-                <input
-                  matInput
-                  type="text"
-                  (keyup)="applyFilter($event)"
-                  placeholder="Buscar..."
-                  #input
-                  class="form-control"
-                />
-              </mat-form-field>
-              <table
-                class="table table-striped"
-                mat-table
-                [dataSource]="dataSource"
-                matSort
-              >
-                <!-- Weight Column -->
-                <ng-container matColumnDef="id">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
-                  <td mat-cell *matCellDef="let element">
-                    {{ element.id }}
-                  </td>
-                </ng-container>
-
-                <!-- Weight Column -->
-                <ng-container matColumnDef="name">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                    Nombre
-                  </th>
-                  <td mat-cell *matCellDef="let element">
-                    {{ element.name }}
-                  </td>
-                </ng-container>
-                c
-
-                <!-- Weight Column -->
-                <ng-container matColumnDef="industry">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                    Industria
-                  </th>
-                  <td mat-cell *matCellDef="let element">
-                    {{ element.industry }}
-                  </td>
-                </ng-container>
-
-                <!-- Weight Column -->
-                <ng-container matColumnDef="marca">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                    Marca
-                  </th>
-                  <td mat-cell *matCellDef="let element">
-                    {{ element.marca }}
-                  </td>
-                </ng-container>
-
-                <!-- Weight Column -->
-                <ng-container matColumnDef="stock">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                    Cantidad
-                  </th>
-                  <td mat-cell *matCellDef="let element">
-                    {{ element.stock }}
-                  </td>
-                </ng-container>
-
-                <!-- Weight Column -->
-                <ng-container matColumnDef="supplier">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                    Proveedor
-                  </th>
-                  <td mat-cell *matCellDef="let element">
-                    {{ element.supplier }}
-                  </td>
-                </ng-container>
-
-                <!-- Weight Column -->
-                <ng-container matColumnDef="branchOffice">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                    Sede
-                  </th>
-                  <td mat-cell *matCellDef="let element">
-                    {{ element.branchOffice }}
-                  </td>
-                </ng-container>
-
-                <!-- Weight Column -->
-                <ng-container matColumnDef="is_active">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                    Estado
-                  </th>
-                  <td mat-cell *matCellDef="let element">
-                    <span
-                      class="badge text-bg-success"
-                      *ngIf="element.is_active == true"
-                      >Activado</span
-                    >
-                    <span
-                      class="badge text-bg-danger"
-                      *ngIf="element.is_active == false"
-                      >Desactivado</span
-                    >
-                  </td>
-                </ng-container>
-
-                <!-- Weight Column -->
-                <ng-container matColumnDef="opciones">
-                  <th mat-header-cell *matHeaderCellDef>Acciones</th>
-                  <td mat-cell *matCellDef="let element">
-                    <button
-                      (click)="openDialogForEdit(element)"
-                      class="btn btn-warning"
-                    >
-                      <i class="fa fa-pen"> </i>
-                    </button>
-                    &nbsp;
-                    <button
-                      (click)="modificarEstado(element.id, 0)"
-                      class="btn btn-danger"
-                      *ngIf="element.is_active == 1"
-                    >
-                      <i class="fa fa-trash"> </i>
-                    </button>
-                    <button
-                      (click)="modificarEstado(element.id, 1)"
-                      class="btn btn-success"
-                      *ngIf="element.is_active == 0"
-                    >
-                      <i class="fa fa-check"> </i>
-                    </button>
-                    &nbsp;
-                    <button
-                      class="btn btn-primary"
-                      (click)="openDialogForDetail(element)"
-                    >
-                      <i class="fa fa-eye"></i>
-                    </button>
-                  </td>
-                </ng-container>
-
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr
-                  mat-row
-                  *matRowDef="let row; columns: displayedColumns"
-                ></tr>
-              </table>
-              <mat-paginator
-                [pageSizeOptions]="[5, 10, 20]"
-                showFirstLastButtons
-              >
-              </mat-paginator>
-            </div>
-          </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 </div>
