--- a/src/app/modules/inventario/ventas/ventas.component.html
+++ b/src/app/modules/inventario/ventas/ventas.component.html
@@ -1,131 +1,123 @@
-
 <app-header></app-header>
 <app-sidebar></app-sidebar>
 <br />
 <div class="content-wrapper">
-  <section class="content">
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-12">
-          <div class="card">
-            <div class="card-body">
-              <mat-form-field appearance="standard">
-                
-              </mat-form-field>
-              <table
-                mat-table
-                [dataSource]="dataSource"
-                class="table table-striped"
-                matSort
-              >
-                <!--- Note that these columns can be defined in any order.
-                      The actual rendered columns are set as a property on the row definition" -->
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-body">
+                            <mat-form-field appearance="standard">
+                                <input matInput type="text" placeholder="Buscar..." #input class="form-control" />
+                            </mat-form-field>
+                            <table class="table table-striped" mat-table [dataSource]="dataSource" matSort>
 
-                <!-- Position Column -->
-                <ng-container matColumnDef="id">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
-                  <td mat-cell *matCellDef="let element">
-                    {{ element.id }}
-                  </td>
-                </ng-container>
+                                <ng-container matColumnDef="id">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>#</th>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{ element.id }}
+                                    </td>
+                                </ng-container>
 
-                <!-- Name Column -->
-                <ng-container matColumnDef="serial_number">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                    Serial
-                  </th>
-                  <td mat-cell *matCellDef="let element">
-                    {{ element.serial_number }}
-                  </td>
-                </ng-container>
-                <ng-container matColumnDef="price">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                        Precio
-                    </th>
-                    <td mat-cell *matCellDef="let element">
-                      {{ element.price}}
-                    </td>
-                  </ng-container>
-                  <ng-container matColumnDef="buy_price">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                      Precio Venta
-                    </th>
-                    <td mat-cell *matCellDef="let element">
-                      {{ element.buy_price }}
-                    </td>
-                  </ng-container>
-                  <ng-container matColumnDef="sale_tax">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                      Impuesto
-                    </th>
-                    <td mat-cell *matCellDef="let element">
-                      {{ element.sale_tax }}
-                    </td>
-                  </ng-container><ng-container matColumnDef="saleTotal">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                      Total
-                    </th>
-                    <td mat-cell *matCellDef="let element">
-                      {{ element.saleTotal }}
-                    </td>
-                  </ng-container>
-                  <ng-container matColumnDef="date_created">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                      Fecha
-                    </th>
-                    <td mat-cell *matCellDef="let element">
-                      {{ element.date_created }}
-                    </td>
-                  </ng-container>
-                  <ng-container matColumnDef="producto">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                      Producto
-                    </th>
-                    <td mat-cell *matCellDef="let element">
-                      {{ element.producto.name }}
-                    </td>
-                  </ng-container>
+                                <ng-container matColumnDef="serial_number">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                                        Serial
+                                    </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{ element.serial_number }}
+                                    </td>
+                                </ng-container>
 
-                <!-- Weight Column -->
-                <ng-container matColumnDef="is_active">
-                  <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                    Estado
-                  </th>
-                  <td mat-cell *matCellDef="let element">
-                    <span
-                      class="badge text-bg-success"
-                      *ngIf="element.is_active == true"
-                      >Activado</span
-                    >
-                    <span
-                      class="badge text-bg-danger"
-                      *ngIf="element.is_active == false"
-                      >Desactivado</span
-                    >
-                  </td>
-                </ng-container>
+                                <ng-container matColumnDef="sale_price">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                                        Precio
+                                    </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{ element.sale_price}}
+                                    </td>
+                                </ng-container>
 
-                <!-- Weight Column -->
-                <ng-container matColumnDef="opciones">
-                  <th mat-header-cell *matHeaderCellDef>Acciones</th>
-                
-                </ng-container>
+                                <ng-container matColumnDef="buy_price">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                                        Precio Venta
+                                    </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{ element.buy_price }}
+                                    </td>
+                                </ng-container>
 
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr
-                  mat-row
-                  *matRowDef="let row; columns: displayedColumns"
-                ></tr>
-              </table>
-              <mat-paginator
-                [pageSizeOptions]="[5, 10, 20]"
-                showFirstLastButtons
-              >
-              </mat-paginator>
+
+                                <ng-container matColumnDef="sale_tax">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                                        Impuesto
+                                    </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{ element.sale_tax }}
+                                    </td>
+                                </ng-container>
+
+                                <ng-container matColumnDef="sale_total">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                                        Total
+                                    </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{ element.sale_total }}
+                                    </td>
+                                </ng-container>
+
+                                <ng-container matColumnDef="receipt_type">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>Tipo de Recibo</th>
+                                    <td mat-cell *matCellDef="let element">
+                                        {{ element.receipt_type }}
+                                    </td>
+                                </ng-container>
+
+                                <ng-container matColumnDef="is_active">
+                                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
+                                        Estado
+                                    </th>
+                                    <td mat-cell *matCellDef="let element">
+                                        <span class="badge text-bg-success"
+                                            *ngIf="element.is_active == true">Activado</span>
+                                        <span class="badge text-bg-danger"
+                                            *ngIf="element.is_active == false">Desactivado</span>
+                                    </td>
+                                </ng-container>
+
+
+                                <ng-container matColumnDef="opciones">
+                                    <th mat-header-cell *matHeaderCellDef>Acciones</th>
+                                    <td mat-cell *matCellDef="let element">
+                                        <!-- <button (click)="openDialogForEdit(element)" class="btn btn-warning">
+                                            <i class="fa fa-pen"> </i>
+                                        </button>
+                                        &nbsp;
+                                        <button (click)="modificarEstado(element.id, 0)" class="btn btn-danger"
+                                            *ngIf="element.is_active == 1">
+                                            <i class="fa fa-trash"> </i>
+                                        </button>
+                                        <button (click)="modificarEstado(element.id, 1)" class="btn btn-success"
+                                            *ngIf="element.is_active == 0">
+                                            <i class="fa fa-check"> </i>
+                                        </button>
+                                        &nbsp;
+                                        <button class="btn btn-primary" (click)="openDialogForDetail(element)">
+                                            <i class="fa fa-eye"></i>
+                                        </button> -->
+                                    </td>
+
+                                </ng-container>
+
+                                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                                <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+                            </table>
+                            <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons>
+                            </mat-paginator>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
-      </div>
-    </div>
-  </section>
+    </section>
 </div>
